# KASHUTHAA

C/: Kasutha.c  multhread.c  tempCodeRunnerFile.c
C#/Final/Kazhutha/: Kazhutha.sln
C#/Final/Kazhutha/Kazhutha/: Program.cs
C#/Final/Kazhutha/Kazhutha/Backend/: Class.cs
C#/Final/Kazhutha/Kazhutha/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
C#/Final/Kazhutha/Kazhutha/Pages/Shared/: _Layout.cshtml  _ValidationScriptsPartial.cshtml
C#/Final/Kazhutha/Kazhutha/Properties/: launchSettings.json
C#/G/ConsoleApp1/: ConsoleApp1.sln
C#/G/ConsoleApp1/ConsoleApp1/: Program.cs
C#/G/ConsoleApp1/ConsoleApp1/NewFolder/: Class1.cs  Class2.cs  Program.cs
C#/Play Kazhutha/: Play Kazhutha.sln
C#/Play Kazhutha/Play Kazhutha/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Play Kazhutha.csproj
C#/Play Kazhutha/Play Kazhutha/PlayLocal/: Client.cs  localJoin.xaml  localJoin.xaml.cs
C#/Play Kazhutha/Play Kazhutha/PlayLocal/Host/: Server.cs  localHost.xaml  localHost.xaml.cs
C/Final/KazhuthaServer/: CMakeLists.txt
C/Final/KazhuthaServer/KazhuthaServer/: CMakeLists.txt  KazhuthaServer.c  KazhuthaServer.h
C/Final/KazhuthaServer/KazhuthaServer/cmake/modules/: findSDL.cmake
C/LINUX/: client.c  server.c
JavaScript/: index.html  scripts.js  styles.css
Python/: Kasutha.py  proxy..py
